fixed calendar spacing and background image responsiveness

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -87,10 +87,6 @@ body{
 }
 .searchResultItemName {
     cursor: pointer;
-    /* transition: all .3s ease-in-out; */
-}
-.searchResultItemName:hover {
-    /* transform: scale(1.08); */
 }
 .rdCard {
     width: 25%;
@@ -163,6 +159,7 @@ body{
 .calendarButtonWrapper {
     display: flex;
     flex-direction: row;
+    margin-top: 4%;
 }
 .calendarButtonContainer {
     width: 33%;
@@ -172,9 +169,11 @@ body{
     align-items: center;
     justify-content: center;
 }
+.calendarFormWrapper {
+    justify-content: center;
+}
 .calendarAddContainer {
     text-align: center
-    /* margin-left: ???????????????????; */
 }
 .calendarNext {
     text-align: right;
@@ -344,8 +343,11 @@ table.table-bordered > tbody > tr > th{
       .rdSideInfoWrapper {
         font-size: 95%;
       }
+      .calendarButtonWrapper {
+          margin-top: 3%;
+      }
       .rdCalendarModalSizing{
-          /* this fixes calendadrModal sizing */
+        /* this fixes calendadrModal sizing */
         height: auto;
         width: auto;
       }
@@ -363,7 +365,10 @@ table.table-bordered > tbody > tr > th{
   and (max-width: 768px)
   and (orientation: portrait) {
     body {
-        background-size: 202%;
+        /* width: 768px; */
+        /* height: 1024px; */
+        background-position: center center;
+        background-attachment: fixed;
     }
     .empHeader {
         padding-left: 2%;
@@ -414,7 +419,12 @@ table.table-bordered > tbody > tr > th{
   and (max-width: 1024px)
   and (orientation: landscape) {
     body {
-        background-size: 113%;
+        /* background-size: 113%; */
+
+        /* height: 768px; */
+        /* width: 1024px; */
+        background-position: center center;
+        background-attachment: fixed;
     }
     .empHeader {
         padding-left: 1%;
@@ -451,7 +461,7 @@ table.table-bordered > tbody > tr > th{
   and (max-height: 812px)
   and (orientation: portrait) {
     body {
-        background-size: 340%;
+        /* background-size: 340%; */
     }
     .empHeaderContainer {
         font-size: 155%;
@@ -529,7 +539,18 @@ table.table-bordered > tbody > tr > th{
     }
   }
 
+
     /* ----------- iPhone 6/7/8 ----------- */
+
+/* Portrait */
+@media only screen
+  and (max-width: 375px)
+  and (max-height: 667px)
+  and (orientation: portrait) {
+      .calendarContainer {
+        margin-bottom: 3%;
+      }
+  }
 
     /* Landscape */
 @media only screen
